feat: support componentPlaceholder

--- a/packages/uni-cli-shared/tsconfig.json
+++ b/packages/uni-cli-shared/tsconfig.json
@@ -5,7 +5,9 @@
     "outDir": "dist",
     "paths": {
       "types/alias": ["types/alias.d.ts"]
-    }
+    },
+    "sourceMap": true,
+    "declaration": true
   },
   "include": [
     "src",
