--- a/packages/uni-components/package.json
+++ b/packages/uni-components/package.json
@@ -18,7 +18,7 @@
   },
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "devDependencies": {
-    "@dcloudio/uni-shared": "workspace:3.0.0-3070320230222002",
+    "@dcloudio/uni-shared": "3.0.0-3070320230222002",
     "@types/quill": "^1.3.7"
   }
 }
