--- a/packages/uni-core/package.json
+++ b/packages/uni-core/package.json
@@ -14,9 +14,9 @@
     "url": "https://github.com/dcloudio/uni-app/issues"
   },
   "devDependencies": {
-    "@dcloudio/uni-i18n": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-vue": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uni-shared": "workspace:3.0.0-3070320230222002",
+    "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-vue": "3.0.0-3070320230222002",
+    "@dcloudio/uni-shared": "3.0.0-3070320230222002",
     "safe-area-insets": "^1.4.1"
   }
 }
