--- a/packages/uni-h5-vite/package.json
+++ b/packages/uni-h5-vite/package.json
@@ -19,8 +19,8 @@
   "license": "Apache-2.0",
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "workspace:*",
-    "@dcloudio/uni-shared": "workspace:3.0.0-3070320230222002",
+    "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
+    "@dcloudio/uni-shared": "3.0.0-3070320230222002",
     "@rollup/pluginutils": "^4.2.0",
     "@vue/compiler-dom": "3.2.47",
     "@vue/compiler-sfc": "3.2.47",
