--- a/packages/uni-mp-vite/package.json
+++ b/packages/uni-mp-vite/package.json
@@ -17,11 +17,11 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "workspace:*",
-    "@dcloudio/uni-i18n": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-compiler": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-vue": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uni-shared": "workspace:3.0.0-3070320230222002",
+    "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
+    "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-compiler": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-vue": "3.0.0-3070320230222002",
+    "@dcloudio/uni-shared": "3.0.0-3070320230222002",
     "@vue/compiler-sfc": "3.2.47",
     "@vue/shared": "3.2.47",
     "debug": "^4.3.3"
