--- a/packages/uni-vue/package.json
+++ b/packages/uni-vue/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/dcloudio/uni-app/issues"
   },
   "devDependencies": {
-    "@dcloudio/uni-mp-vue": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uni-shared": "workspace:3.0.0-3070320230222002"
+    "@dcloudio/uni-mp-vue": "3.0.0-3070320230222002",
+    "@dcloudio/uni-shared": "3.0.0-3070320230222002"
   }
 }
