--- a/packages/uts/package.json
+++ b/packages/uts/package.json
@@ -14,11 +14,11 @@
     "directory": "packages/uts"
   },
   "optionalDependencies": {
-    "@dcloudio/uts-darwin-arm64": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uts-darwin-x64": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uts-linux-x64-gnu": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uts-linux-x64-musl": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uts-win32-ia32-msvc": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uts-win32-x64-msvc": "workspace:3.0.0-3070320230222002"
+    "@dcloudio/uts-darwin-arm64": "3.0.0-3070320230222002",
+    "@dcloudio/uts-darwin-x64": "3.0.0-3070320230222002",
+    "@dcloudio/uts-linux-x64-gnu": "3.0.0-3070320230222002",
+    "@dcloudio/uts-linux-x64-musl": "3.0.0-3070320230222002",
+    "@dcloudio/uts-win32-ia32-msvc": "3.0.0-3070320230222002",
+    "@dcloudio/uts-win32-x64-msvc": "3.0.0-3070320230222002"
   }
 }
