--- a/packages/uni-mp-vite/package.json
+++ b/packages/uni-mp-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-mp-vite",
-  "version": "3.0.0-3070320230222002",
+  "version": "3.0.0-3070320230222002-a",
   "description": "uni-mp-vite",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -17,10 +17,10 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
+    "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?feature/next",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-compiler": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-vue": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-compiler": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-compiler?feature/next",
+    "@dcloudio/uni-mp-vue": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-vue?feature/next",
     "@dcloudio/uni-shared": "3.0.0-3070320230222002",
     "@vue/compiler-sfc": "3.2.47",
     "@vue/shared": "3.2.47",
