--- a/packages/uni-mp-weixin/package.json
+++ b/packages/uni-mp-weixin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-mp-weixin",
-  "version": "3.0.0-3070320230222002-a",
+  "version": "3.0.0-3070320230222002-b",
   "description": "uni-app mp-weixin",
   "main": "dist/index.js",
   "files": [
@@ -29,9 +29,9 @@
     "@vue/compiler-core": "3.2.47"
   },
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?feature/next",
-    "@dcloudio/uni-mp-vite": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-vite?feature/next",
-    "@dcloudio/uni-mp-vue": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-vue?feature/next",
+    "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?feature/next-b",
+    "@dcloudio/uni-mp-vite": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-vite?feature/next-b",
+    "@dcloudio/uni-mp-vue": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-vue?feature/next-b",
     "@dcloudio/uni-shared": "3.0.0-3070320230222002",
     "@vue/shared": "3.2.47",
     "jimp": "^0.10.1",
