--- a/packages/uni-app-plus/package.json
+++ b/packages/uni-app-plus/package.json
@@ -36,7 +36,7 @@
     "postcss-selector-parser": "^6.0.6"
   },
   "devDependencies": {
-    "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
+    "@dcloudio/uni-cli-shared": "workspace:*",
     "@dcloudio/uni-components": "3.0.0-3070320230222002",
     "@dcloudio/uni-h5": "3.0.0-3070320230222002",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
