--- a/packages/uni-app-vite/package.json
+++ b/packages/uni-app-vite/package.json
@@ -20,7 +20,7 @@
   "license": "Apache-2.0",
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
+    "@dcloudio/uni-cli-shared": "workspace:*",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
     "@dcloudio/uni-nvue-styler": "3.0.0-3070320230222002",
     "@dcloudio/uni-shared": "3.0.0-3070320230222002",
