--- a/packages/uni-h5/package.json
+++ b/packages/uni-h5/package.json
@@ -45,7 +45,7 @@
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "devDependencies": {
     "@amap/amap-jsapi-types": "^0.0.8",
-    "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
+    "@dcloudio/uni-cli-shared": "workspace:*",
     "@types/estree": "^0.0.51",
     "@types/google.maps": "^3.45.6",
     "acorn-loose": "^8.2.1",
