--- a/packages/uni-mp-compiler/package.json
+++ b/packages/uni-mp-compiler/package.json
@@ -22,7 +22,7 @@
     "@babel/generator": "^7.20.5",
     "@babel/parser": "^7.20.5",
     "@babel/types": "^7.20.7",
-    "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?chore/next",
+    "@dcloudio/uni-cli-shared": "workspace:*",
     "@dcloudio/uni-shared": "3.0.0-3070320230222002",
     "@vue/compiler-core": "3.2.47",
     "@vue/compiler-dom": "3.2.47",
