--- a/packages/uni-mp-vite/package.json
+++ b/packages/uni-mp-vite/package.json
@@ -17,11 +17,11 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?chore/next",
+    "@dcloudio/uni-cli-shared": "workspace:*",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-compiler": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-compiler?chore/next",
-    "@dcloudio/vite-plugin-uni": "https://gitpkg.now.sh/txlct/uniapp/packages/vite-plugin-uni?chore/next",
-    "@dcloudio/uni-mp-vue": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-vue?chore/next",
+    "@dcloudio/vite-plugin-uni": "workspace:*",
+    "@dcloudio/uni-mp-compiler": "workspace:*",
+    "@dcloudio/uni-mp-vue": "workspace:*",
     "@dcloudio/uni-shared": "3.0.0-3070320230222002",
     "@vue/compiler-sfc": "3.2.47",
     "@vue/shared": "3.2.47",
