--- a/packages/uni-stat/package.json
+++ b/packages/uni-stat/package.json
@@ -20,7 +20,7 @@
   },
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
+    "@dcloudio/uni-cli-shared": "workspace:*",
     "@dcloudio/uni-shared": "3.0.0-3070320230222002",
     "debug": "^4.3.3"
   },
