--- a/packages/uni-mp-qq/package.json
+++ b/packages/uni-mp-qq/package.json
@@ -26,7 +26,7 @@
   },
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "devDependencies": {
-    "@dcloudio/uni-mp-weixin": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-weixin": "workspace:*",
     "@types/fs-extra": "^9.0.13",
     "@vue/compiler-core": "3.2.47"
   },
