--- a/packages/uni-mp-vite/package.json
+++ b/packages/uni-mp-vite/package.json
@@ -20,6 +20,7 @@
     "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?chore/next",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
     "@dcloudio/uni-mp-compiler": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-compiler?chore/next",
+    "@dcloudio/vite-plugin-uni": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-compiler?chore/next",
     "@dcloudio/uni-mp-vue": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-vue?chore/next",
     "@dcloudio/uni-shared": "3.0.0-3070320230222002",
     "@vue/compiler-sfc": "3.2.47",
