--- a/packages/vite-plugin-uni/package.json
+++ b/packages/vite-plugin-uni/package.json
@@ -55,7 +55,7 @@
     "@types/estree": "^0.0.51",
     "@types/express": "^4.17.12",
     "@types/fs-extra": "^9.0.13",
-    "@types/sass": "^1.16.0",
+    "@types/sass": "1.43.1",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "chokidar": "^3.5.3",
     "vite": "^4.0.0",
