--- a/packages/uni-h5/package.json
+++ b/packages/uni-h5/package.json
@@ -29,7 +29,7 @@
     "main": "dist/uni.compiler.js"
   },
   "dependencies": {
-    "@dcloudio/uni-h5-vite": "3.0.0-3070320230222002",
+    "@dcloudio/uni-h5-vite": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-h5-vite?chore/next",
     "@dcloudio/uni-h5-vue": "3.0.0-3070320230222002",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
     "@dcloudio/uni-shared": "3.0.0-3070320230222002",
@@ -45,7 +45,7 @@
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "devDependencies": {
     "@amap/amap-jsapi-types": "^0.0.8",
-    "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
+    "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?chore/next",
     "@types/estree": "^0.0.51",
     "@types/google.maps": "^3.45.6",
     "acorn-loose": "^8.2.1",
