--- a/packages/uni-app/package.json
+++ b/packages/uni-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-app",
-  "version": "3.0.0-3070320230222002",
+  "version": "3.0.0-3070320230222002-7",
   "description": "@dcloudio/uni-app",
   "main": "./dist/uni-app.cjs.js",
   "module": "./dist/uni-app.es.js",
@@ -25,10 +25,10 @@
   },
   "dependencies": {
     "@dcloudio/uni-cloud": "3.0.0-3070320230222002",
-    "@dcloudio/uni-components": "3.0.0-3070320230222002",
+    "@dcloudio/uni-components": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-components?chore/next",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
     "@dcloudio/uni-push": "3.0.0-3070320230222002",
-    "@dcloudio/uni-shared": "3.0.0-3070320230222002",
+    "@dcloudio/uni-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-shared?chore/next",
     "@dcloudio/uni-stat": "3.0.0-3070320230222002",
     "@vue/shared": "3.2.47"
   },
