--- a/packages/vite-plugin-uni/package.json
+++ b/packages/vite-plugin-uni/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/vite-plugin-uni",
-  "version": "3.0.0-3070320230222002-5",
+  "version": "3.0.0-3070320230222002-7",
   "description": "uni-app vite plugin",
   "bin": {
     "uni": "bin/uni.js"
@@ -29,7 +29,7 @@
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/plugin-transform-typescript": "^7.20.2",
     "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?chore/next",
-    "@dcloudio/uni-shared": "3.0.0-3070320230222002",
+    "@dcloudio/uni-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-shared?chore/next",
     "@rollup/pluginutils": "^4.2.0",
     "@vitejs/plugin-legacy": "^4.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
