--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,6 +35,30 @@
       ],
       "cwd": "${workspaceFolder}/packages/playground/vue3",
       "type": "node"
+    },
+    {
+      // 多项目h5打包测试
+      "name": "debug h5 multi-platform",
+      "request": "launch",
+      "runtimeArgs": [
+        "build:h5",
+        "debug"
+      ],
+      "env": {
+        "PLATFORM": "h5",
+        "UNI_PLATFORM": "h5",
+        "PLATFORM_TYPE": "action",
+        "PREFIX": "pages/",
+        "WORKING_DIR": "../compiler/h5-action",
+        "NODE_OPTIONS": "--trace-warnings"
+      },
+      "runtimeExecutable": "pnpm",
+      "runtimeVersion": "16",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "cwd": "${workspaceFolder}/packages/playground/vue3",
+      "type": "node"
     }
   ]
 }
