--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "@dcloudio/types": "3.2.11",
-    "@dcloudio/uni-api": "workspace:3.0.0-3070320230222002",
-    "@dcloudio/uni-app": "workspace:3.0.0-3070320230222002",
+    "@dcloudio/uni-api": "workspace:*",
+    "@dcloudio/uni-app": "workspace:*",
     "@jest/types": "^29.5.0",
     "@microsoft/api-extractor": "^7.34.4",
     "@rollup/plugin-alias": "^4.0.3",
