feat: expose main ts app

--- a/packages/playground/vue3/src/manifest.json
+++ b/packages/playground/vue3/src/manifest.json
@@ -13,5 +13,12 @@
         },
         "usingComponents": true
     },
+    "h5": {
+        "optimization": {
+            "treeShaking": {
+                "enable": true
+            }
+        }
+    },
     "vueVersion": "3"
 }
