--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,23 +18,22 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
 
-      - name: Setup Node ${{ matrix.node_version }}
-        uses: actions/setup-node@v1
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 7
+
+      - name: Set node version to 16
+        uses: actions/setup-node@v2
         with:
           node-version: 16
-          registry-url: 'https://registry.npmjs.org'
-    
+          cache: 'pnpm'
+
+   
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
       - name: Git Identity
         run: |
           git config --global user.name 'github-actions[bot]'
@@ -52,16 +51,13 @@ jobs:
         run : echo "$commitmsg"
 
       # Before publish
-      - name: Install Dependencies
-        id: install_deps
-        # if: github.event.pull_request.merged == true
-        run: yarn
+      - run: pnpm install
 
       # merge codes and auto tag
-      - name: Auto run standard-version
-        id: auto_version
-        # if: github.event.pull_request.merged == true
-        run: yarn version:auto
+      - uses: google-github-actions/release-please-action@v3
+        with:
+          release-type: node
+          package-name: release-please-action
 
       # Define ${CURRENT_VERSION}
       - name: Set Current Version
