--- a/packages/playground/vue3/package.json
+++ b/packages/playground/vue3/package.json
@@ -16,10 +16,13 @@
     "vue": "3.2.45"
   },
   "devDependencies": {
+    "@babel/types": "^7.20.7",
     "@dcloudio/types": "^3.3.2",
     "@dcloudio/uni-cli-shared": "link:../../uni-cli-shared",
     "@dcloudio/vite-plugin-uni": "link:../../vite-plugin-uni",
     "@vue/tsconfig": "^0.1.3",
+    "es-module-lexer": "^0.9.3",
+    "magic-string": "^0.27.0",
     "typescript": "^4.9.4",
     "vite": "4.0.4",
     "vite-plugin-inspect": "^0.7.15",
