chore: plugin demo

--- a/packages/playground/vue3/package.json
+++ b/packages/playground/vue3/package.json
@@ -4,8 +4,11 @@
   "scripts": {
     "dev": "uni",
     "dev:mp": "uni -p mp-weixin",
+    "dev:plugin": "cross-env UNI_OUTPUT_DIR=dist/dev/mp-weixin/plugin pnpm dev:mp --plugin plugin",
+    "dev:mp-plugin": "cross-env NODE_ENV=development UNI_PLATFORM=mp-weixin UNI_OUTPUT_DIR=dist/dev/mp-weixin/mp pnpm dev:mp",
     "build:h5": "uni build",
     "build:mp": "uni build -p mp-weixin",
+    "build:plugin": "cross-env UNI_OUTPUT_DIR=dist/build/mp-weixin/plugin pnpm run build:mp --plugin plugin",
     "test": "vite --debug"
   },
   "dependencies": {
@@ -21,6 +24,7 @@
     "@dcloudio/uni-cli-shared": "link:../../uni-cli-shared",
     "@dcloudio/vite-plugin-uni": "link:../../vite-plugin-uni",
     "@vue/tsconfig": "^0.1.3",
+    "cross-env": "^7.0.3",
     "es-module-lexer": "^0.9.3",
     "magic-string": "^0.27.0",
     "typescript": "^4.9.4",
