--- a/packages/playground/vue3/src/manifest.json
+++ b/packages/playground/vue3/src/manifest.json
@@ -11,7 +11,13 @@
         "setting": {
             "urlCheck": false
         },
-        "usingComponents": true
+        "usingComponents": true,
+        "plugins": {
+            "plugin": {
+                "version": "dev",
+                "provider": ""
+            }
+        }
     },
     "h5": {
         "optimization": {
