--- a/packages/vue-cli-plugin-uni/package.json
+++ b/packages/vue-cli-plugin-uni/package.json
@@ -28,15 +28,15 @@
     "mkdirp": "^0.5.1",
     "module-alias": "^2.1.0",
     "neo-async": "^2.6.1",
-    "postcss-import": "^12.0.1",
+    "postcss": "^8.4.23",
+    "postcss-import": "^14.1.0",
     "postcss-selector-parser": "^5.0.0",
     "postcss-value-parser": "^3.3.1",
     "strip-json-comments": "^2.0.1",
     "update-check": "^1.5.3",
     "webpack-merge": "^4.1.4",
     "wrap-loader": "^0.2.0",
-    "xregexp": "4.0.0",
-    "postcss": "7.0.39"
+    "xregexp": "4.0.0"
   },
   "peerDependencies": {
     "copy-webpack-plugin": ">=5",
