--- a/packages/uni-mp-vite/package.json
+++ b/packages/uni-mp-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-mp-vite",
-  "version": "3.0.0-3070320230222002-10",
+  "version": "3.0.0-3070320230222002-11",
   "description": "uni-mp-vite",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -17,13 +17,13 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "workspace:*",
+    "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?feature/next",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-compiler": "workspace:*",
-    "@dcloudio/vite-plugin-uni": "workspace:*",
-    "@dcloudio/uni-mp-vue": "workspace:*",
-    "@dcloudio/uni-shared": "workspace:*",
-    "@dcloudio/uni-mp-weixin": "workspace:*",
+    "@dcloudio/uni-mp-compiler": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-compiler?feature/next",
+    "@dcloudio/vite-plugin-uni": "https://gitpkg.now.sh/txlct/uniapp/packages/vite-plugin-uni?feature/next",
+    "@dcloudio/uni-mp-vue": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-vue?feature/next",
+    "@dcloudio/uni-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-shared?feature/next",
+    "@dcloudio/uni-mp-weixin": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-weixin?feature/next",
     "@vue/compiler-sfc": "3.2.47",
     "@vue/shared": "3.2.47",
     "debug": "^4.3.3"
