--- a/packages/uni-components/package.json
+++ b/packages/uni-components/package.json
@@ -18,7 +18,7 @@
   },
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "devDependencies": {
-    "@dcloudio/uni-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-shared?feature/next",
+    "@dcloudio/uni-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-shared?v3.0.3-beta",
     "@types/quill": "^1.3.7"
   }
 }
