--- a/packages/uni-mp-vite/package.json
+++ b/packages/uni-mp-vite/package.json
@@ -17,13 +17,13 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?feature/next",
+    "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?v3.0.3-beta",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-compiler": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-compiler?feature/next",
-    "@dcloudio/vite-plugin-uni": "https://gitpkg.now.sh/txlct/uniapp/packages/vite-plugin-uni?feature/next",
-    "@dcloudio/uni-mp-vue": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-vue?feature/next",
-    "@dcloudio/uni-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-shared?feature/next",
-    "@dcloudio/uni-mp-weixin": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-weixin?feature/next",
+    "@dcloudio/uni-mp-compiler": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-compiler?v3.0.3-beta",
+    "@dcloudio/vite-plugin-uni": "https://gitpkg.now.sh/txlct/uniapp/packages/vite-plugin-uni?v3.0.3-beta",
+    "@dcloudio/uni-mp-vue": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-vue?v3.0.3-beta",
+    "@dcloudio/uni-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-shared?v3.0.3-beta",
+    "@dcloudio/uni-mp-weixin": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-mp-weixin?v3.0.3-beta",
     "@vue/compiler-sfc": "3.2.47",
     "@vue/shared": "3.2.47",
     "debug": "^4.3.3"
