feat: upgrade package 3.0.6-beta

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "e2e:ssr:open": "cd packages/playground/ssr && npx cypress open",
     "release": "node scripts/release.js --skipTests",
     "release:mp": "node scripts/release.js uni-cli-shared vite-plugin-uni uni-mp-vue uni-mp-vite uni-mp-compiler uni-mp-weixin --skipTests --skipBuild",
-    "release:h5": "node scripts/release.js uni-app uni-cli-shared uni-h5 uni-h5-vite vite-plugin-uni --skipTests --skipBuild",
+    "release:h5": "node scripts/release.js uni-app uni-cli-shared uni-h5 uni-h5-vite vite-plugin-uni --skipTests --skipBuild --dry",
     "release:version": "pnpm release --skipTests --dry",
     "release:dev": "pnpm release --local --skipTests --dry"
   },
