--- a/packages/uni-components/package.json
+++ b/packages/uni-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-components",
-  "version": "3.0.0-3070320230222002-13",
+  "version": "3.0.0-3070320230222002-15",
   "description": "@dcloudio/uni-components",
   "main": "index.js",
   "files": [
@@ -18,7 +18,7 @@
   },
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "devDependencies": {
-    "@dcloudio/uni-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-shared?v3.0.5-beta",
+    "@dcloudio/uni-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-shared?v3.0.6",
     "@types/quill": "^1.3.7"
   }
 }
