--- a/packages/playground/vue3/package.json
+++ b/packages/playground/vue3/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "uni",
+    "dev:page": "cross-env PAGE=true uni",
     "dev:mp": "uni -p mp-weixin",
     "dev:plugin": "cross-env UNI_OUTPUT_DIR=dist/dev/mp-weixin/plugin pnpm dev:mp --plugin",
     "dev:mp-plugin": "cross-env NODE_ENV=development UNI_PLATFORM=mp-weixin UNI_OUTPUT_DIR=dist/dev/mp-weixin/mp pnpm dev:mp --minify",
