--- a/packages/uni-h5/package.json
+++ b/packages/uni-h5/package.json
@@ -29,10 +29,10 @@
     "main": "dist/uni.compiler.js"
   },
   "dependencies": {
-    "@dcloudio/uni-h5-vite": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-h5-vite?feature/next",
+    "@dcloudio/uni-h5-vite": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-h5-vite?feature/mult-pages",
     "@dcloudio/uni-h5-vue": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-h5-vue?v3.0.5-beta",
     "@dcloudio/uni-i18n": "3.0.0-3070320230222002",
-    "@dcloudio/uni-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-shared?feature/next",
+    "@dcloudio/uni-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-shared?feature/mult-pages",
     "@vue/server-renderer": "3.2.47",
     "@vue/shared": "3.2.47",
     "debug": "^4.3.3",
@@ -45,7 +45,7 @@
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "devDependencies": {
     "@amap/amap-jsapi-types": "^0.0.8",
-    "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?feature/next",
+    "@dcloudio/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?feature/mult-pages",
     "@types/estree": "^0.0.51",
     "@types/google.maps": "^3.45.6",
     "acorn-loose": "^8.2.1",
