--- a/packages/vue-cli-plugin-uni/packages/uni-push/package.json
+++ b/packages/vue-cli-plugin-uni/packages/uni-push/package.json
@@ -20,7 +20,7 @@
   },
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "dependencies": {
-    "@tencent/uni-cli-shared": "https://gitpkg.now.sh/txlct/uniapp/packages/uni-cli-shared?pnpm",
+    "@tencent/uni-cli-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-cli-shared?pnpm",
     "debug": "^4.3.3"
   },
   "devDependencies": {
