--- a/packages/uni-h5-vue/package.json
+++ b/packages/uni-h5-vue/package.json
@@ -19,6 +19,6 @@
   },
   "gitHead": "33e807d66e1fe47e2ee08ad9c59247e37b8884da",
   "dependencies": {
-    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?v3.0.15"
+    "@dcloudio/uni-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-shared?feature/temp"
   }
 }
