--- a/packages/uni-quickapp-webview/package.json
+++ b/packages/uni-quickapp-webview/package.json
@@ -29,9 +29,9 @@
     "@vue/compiler-core": "3.2.47"
   },
   "dependencies": {
-    "@dcloudio/uni-cli-shared": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-cli-shared?chore/next",
-    "@dcloudio/uni-mp-vite": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-mp-vite?chore/next",
-    "@dcloudio/uni-mp-vue": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-mp-vue?chore/next",
+    "@dcloudio/uni-cli-shared": "workspace:*",
+    "@dcloudio/uni-mp-vite": "workspace:*",
+    "@dcloudio/uni-mp-vue": "workspace:*",
     "@dcloudio/uni-shared": "3.0.0-3070320230222002",
     "@vue/shared": "3.2.47"
   }
