--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "3.0.0-3070320230222002-v3.0.15-v3.0.15-v3.0.15-beta4",
+  "version": "3.0.0-3070320230222002-v3.0.15-beta4",
   "workspaces": [
     "packages/*"
   ],
@@ -18,7 +18,7 @@
     "lint": "eslint packages/*/src/**/*.ts",
     "format": "prettier --write --parser typescript \"packages/**/*.ts?(x)\"",
     "test": "tsc -p ./test-dts/tsconfig.json && node scripts/test.js && jest",
-    "test-dts": "tsc -p ./test-dts/tsconfig.json && tsc -p ./test-dts/tsconfig.build.json",
+    "test-dts": "tsc -p ./test-dts/tsconfie.json && tsc -p ./test-dts/tsconfig.build.json",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
     "e2e:ssr:dev": "cd packages/playground/ssr && npm run dev:ssr",
