--- a/packages/uni-components/package.json
+++ b/packages/uni-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-components",
-  "version": "3.0.0-3070320230222002-v3.0.15-v3.0.15-v3.0.15-beta4",
+  "version": "3.0.0-3070320230222002-v3.0.15-beta4",
   "description": "@dcloudio/uni-components",
   "main": "index.js",
   "files": [
