--- a/packages/uni-mp-vue/package.json
+++ b/packages/uni-mp-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-mp-vue",
-  "version": "3.0.0-3070320230222002-v3.0.15-v3.0.15-v3.0.15-beta4",
+  "version": "3.0.0-3070320230222002-v3.0.15-beta4",
   "description": "@dcloudio/uni-mp-vue",
   "main": "dist/vue.runtime.esm.js",
   "module": "dist/vue.runtime.esm.js",
