--- a/packages/vite-plugin-uni/package.json
+++ b/packages/vite-plugin-uni/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/vite-plugin-uni",
-  "version": "3.0.0-3070320230222002-v3.0.15-v3.0.15-v3.0.15-beta4",
+  "version": "3.0.0-3070320230222002-v3.0.15-beta4",
   "description": "uni-app vite plugin",
   "bin": {
     "uni": "bin/uni.js"
