--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build:h5": "node scripts/build.js uni-app uni-cli-shared uni-h5 uni-h5-vite vite-plugin-uni uni-shared",
     "dev:h5": "node scripts/build.js uni-app uni-cli-shared uni-h5  uni-h5-vite vite-plugin-uni -d",
     "build:app": "node scripts/build.js uni-app-plus uni-app-vite uni-app-vue",
-    "build:mp": "node scripts/build.js uni-cli-shared vite-plugin-uni uni-mp-vite uni-mp-compiler uni-mp-weixin",
-    "dev:mp": "node scripts/build.js uni-cli-shared vite-plugin-uni uni-mp-vite uni-mp-compiler uni-mp-weixin -d",
+    "build:mp": "node scripts/build.js uni-cli-shared uni-shared vite-plugin-uni uni-mp-vite uni-mp-compiler uni-mp-weixin",
+    "dev:mp": "node scripts/build.js uni-cli-shared uni-shared vite-plugin-uni uni-mp-vite uni-mp-compiler uni-mp-weixin -d",
     "dev:mp:p": "node scripts/build.js uni-cli-shared & node scripts/build.js vite-plugin-uni & node scripts/build.js uni-mp-vue & node scripts/build.js uni-mp-vite & node scripts/build.js uni-mp-compiler & node scripts/build.js uni-mp-weixin",
     "size": "npm run build size-check",
     "lint": "eslint packages/*/src/**/*.ts",
@@ -51,7 +51,7 @@
     "@babel/preset-env": "^7.20.2",
     "@dcloudio/types": "3.2.11",
     "@dcloudio/uni-api": "workspace:*",
-    "@dcloudio/uni-app": "https://gitpkg.vercel.app/txlct/uniapp/packages/uni-app?v3.0.18",
+    "@dcloudio/uni-app": "workspace:*",
     "@jest/types": "^29.5.0",
     "@microsoft/api-extractor": "^7.34.4",
     "@rollup/plugin-alias": "^4.0.3",
