--- a/packages/uni-mp-compiler/tsconfig.json
+++ b/packages/uni-mp-compiler/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "dist",
     "resolveJsonModule": true,
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "declarationMap": true
   },
   "include": ["src", "../shims-node.d.ts", "../shims-uni-app.d.ts"]
 }
