--- a/packages/uni-shared/package.json
+++ b/packages/uni-shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dcloudio/uni-shared",
-  "version": "3.0.0-3070320230222002-v3.0.18-beta",
+  "version": "3.0.18-v3.0.18-beta",
   "description": "@dcloudio/uni-shared",
   "main": "./dist/uni-shared.cjs.js",
   "module": "./dist/uni-shared.es.js",
